--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <header class="bg-secondary py-5 mb-4">
+    <header class="headcol py-5 mb-4">
       <h1 class="text-center">Мой первый Bootstrap</h1>
       <p class="text-center">Измените размер этой страницы, чтобы увидеть еффект!</p>
     </header>
