--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header class="headcol py-5 mb-4">
       <h1 class="text-center">Мой первый Bootstrap</h1>
-      <p class="text-center">Измените размер этой страницы, чтобы увидеть еффект!</p>
+      <p class="text-center px-4">Измените размер этой страницы, чтобы увидеть еффект!</p>
     </header>
 	<div class="container">
 		<div class="row">
